Fix legend being too wide

--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -158,8 +158,10 @@ output {
 
 svg {
   vertical-align: middle;  // Removes bottom margin
-  width: 100%;
-  display: block;
+  &.block {
+    width: 100%;
+    display: block;
+  }
 }
 
 text {
